--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "world-gist",
-    "private": true,
     "version": "0.0.0",
     "type": "module",
+    "main": "main.jsx",
+    "homepage": ".",
     "scripts": {
         "dev": "vite --host",
         "build": "vite build",
