--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "type": "module",
     "main": "main.jsx",
-    "homepage": ".",
+    "homepage": "/world-gist/",
     "scripts": {
         "dev": "vite --host",
         "build": "vite build",
