--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
     "name": "world-gist",
+    "private": true,
     "version": "0.0.0",
     "type": "module",
-    "main": "main.jsx",
-    "homepage": "/world-gist/",
     "scripts": {
         "dev": "vite --host",
         "build": "vite build",
